# mts-dylib-reference

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-lib.yml
src/: mts-dylib-reference.cpp
test/: CMakeLists.txt  clnt24EDO.cpp  mst24EDO.cpp  test-lib-masteronly.cpp  test-lib.cpp
test/modified-oddsound/: WhatIsModified.md
test/modified-oddsound/Client/: libMTSClient.cpp
test/modified-oddsound/Master/: libMTSMaster.cpp
